--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ mpmath==1.3.0
 narwhals==2.6.0
 networkx==3.5
 numpy==2.2.6
-opencv-python==4.12.0.88
+opencv-python-headless==4.12.0.88
 packaging==25.0
 pandas==2.3.3
 pillow==11.3.0
